examples/crates/results.txt
Evaluation results:
---------------------------
Evaluating crate: example1
This crate should be safe
[RESULT] Results for the SAFE crate are as expected.
---------------------------
   Compiling example1 v0.1.0 (/Users/hassnain/Desktop/LHS/lhs/examples/crates/safe/example1)
warning: unused variable: `x`
 --> src/main.rs:4:9
  |
4 |     let x = 5;
  |         ^ help: if this is intentional, prefix it with an underscore: `_x`
  |
  = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `y`
 --> src/main.rs:5:9
  |
5 |     let y = 10;
  |         ^ help: if this is intentional, prefix it with an underscore: `_y`

warning: function `another_function` is never used
  --> src/main.rs:15:4
   |
15 | fn another_function() {
   |    ^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

MIR for function: DefId(0:4 ~ example1[bfb7]::main)
Unsupported Type: ()
Unsupported Type: ()
Unsupported Type: ()
START: Path 0!
thread 'rustc' panicked at /rustc/92c6c03805408a1a261b98013304e9bbf59ee428/compiler/rustc_hir/src/definitions.rs:81:26:
index out of bounds: the len is 6 but the index is 2345
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
warning: `example1` (bin "example1") generated 3 warnings
error: could not compile `example1` (bin "example1"); 3 warnings emitted
---------------------------
Evaluating crate: example2
This crate should be safe
[RESULT] Results for the SAFE crate are as expected.
---------------------------
   Compiling example2 v0.1.0 (/Users/hassnain/Desktop/LHS/lhs/examples/crates/safe/example2)
MIR for function: DefId(0:4 ~ example2[2a93]::get_random_bool)
START: Path 0!
thread 'rustc' panicked at /rustc/92c6c03805408a1a261b98013304e9bbf59ee428/compiler/rustc_hir/src/definitions.rs:81:26:
index out of bounds: the len is 6 but the index is 952
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: could not compile `example2` (bin "example2")
---------------------------
Evaluating crate: example1
This crate should be unsafe
[ALERT] Missing expected warning in UNSAFE crate.
---------------------------
   Compiling example1 v0.1.0 (/Users/hassnain/Desktop/LHS/lhs/examples/crates/unsafe/example1)
MIR for function: DefId(0:6 ~ example1[bfb7]::main)
Unsupported Type: ()
Unsupported Type: (u8, bool)
Unsupported Type: (u8, bool)
Unsupported Type: (u8, bool)
Unsupported Type: (u8, bool)
Unsupported Type: (u8, bool)
Unsupported Type: (u8, bool)
Unsupported Type: ()
Unsupported Type: ()
START: Path 0!
thread 'rustc' panicked at /rustc/92c6c03805408a1a261b98013304e9bbf59ee428/compiler/rustc_hir/src/definitions.rs:81:26:
index out of bounds: the len is 9 but the index is 2345
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: could not compile `example1` (bin "example1")

Summary:
Safe crates accuracy: 2/2
Unsafe crates accuracy: 0/1
